Acrescentado exemplos 4, 5 e 6. Editado informaões da ultima aula no notepad e atualizado a estrutura html

--- a/01EstruturaBase.html
+++ b/01EstruturaBase.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title> Estrutura Base</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
 
-        <!--JS-->
-        <script></script>
-    </head>
-    <body>
+    <!--JS-->
+    <script></script>
+</head>
+<body>
 
-    </body>
+</body>
 </html>
+
+
